--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,51 @@
 .titulo {
-  background-color: red;
+  padding-top: 20px;
+  font-style: oblique;
+  font-family: cursive;
+  text-align: center;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+.titulo:hover {
+  color: #000;
+}
+
+.titulo::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.titulo:hover::before {
+  transform: scaleX(1);
+}
+
+.selector {
+  font-style: oblique;
+  font-family: cursive;
+}
+
+* {
+  background-color: rosybrown !important;
+}
+
+.section {
+  background-color: rosybrown !important;
+}
+
+.pelota {
+  display: flex;
+  justify-content: center;
+  border-radius: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
