--- a/scss/componentes/_botones.scss
+++ b/scss/componentes/_botones.scss
@@ -1,19 +1,19 @@
 .btn-boton {
-	background-color: #878787 !important;
-	border-color: #7a7a7a !important;
-	color:#FFFFFF;
-	display: inline;
+  background-color: #878787 !important;
+  border-color: #7a7a7a !important;
+  color: black !important;
+  display: inline;
   align-items: center;
   justify-content: space-evenly !important;
-  
+  font-family: "Staatliches", cursive;
 }
 .btn-boton:hover,
 .btn-boton:focus,
 .btn-boton:active,
 .btn-boton.active {
-	background-color: #777777 !important;
-	border-color: #5f5f5f !important;
-	color:#FFFFFF;
+  background-color: #777777 !important;
+  border-color: #5f5f5f !important;
+  color: black !important;
 }
 .btn-boton.disabled:hover,
 .btn-boton.disabled:focus,
@@ -27,7 +27,16 @@ fieldset[disabled] .btn-boton:hover,
 fieldset[disabled] .btn-boton:focus,
 fieldset[disabled] .btn-boton:active,
 fieldset[disabled] .btn-boton.active {
-	background-color: #878787 !important;
-	border-color: #7a7a7a !important;
-	color:#FFFFFF;
+  background-color: #878787 !important;
+  border-color: #7a7a7a !important;
+  color: black !important;
+}
+
+input {
+  border-radius: 5px;
+  color: black !important;
+  display: inline;
+  align-items: center;
+  justify-content: space-evenly !important;
+  font-family: "Staatliches", cursive;
 }
