--- a/scss/componentes/_textos.scss
+++ b/scss/componentes/_textos.scss
@@ -1,35 +1,46 @@
-.titulo{
-    padding-top: 20px;;
-    font-style: oblique;
-    font-family: cursive;
-    text-align: center;
-    position: relative;
-    color: #000;
-    text-decoration: none;
-  }
-  
-  .titulo:hover {
-    color: #000;
-  }
-  
-  .titulo::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
-  }
-  
-  .titulo:hover::before {
-    transform: scaleX(1);
-  }
+.principal {
+  padding-top: 20px;
+  font-family: "Staatliches", cursive;
+  text-align: center;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  font-size: 60px;
+}
 
-  .selector{
-    font-style: oblique;
-    font-family: cursive;
-  }
+.titulo {
+  padding-top: 20px;
+  font-family: "Staatliches", cursive;
+  text-align: center;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+.titulo:hover {
+  color: #000;
+}
+
+.titulo::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.titulo:hover::before {
+  transform: scaleX(1);
+}
+
+.selector {
+  font-style: oblique;
+  font-family: cursive;
+}
+
+////////////////////////////////////////////////////////
