--- a/scss/componentes/_textos.scss
+++ b/scss/componentes/_textos.scss
@@ -8,6 +8,16 @@
   font-size: 60px;
 }
 
+.entradas {
+  padding-top: 20px;
+  font-family: "Staatliches", cursive;
+  text-align: center;
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  font-size: 20px;
+}
+
 .titulo {
   padding-top: 20px;
   font-family: "Staatliches", cursive;
